style: use data frame as much as possible

--- a/hw1/notebook/question-1.ipynb
+++ b/hw1/notebook/question-1.ipynb
@@ -144,7 +144,7 @@
    "outputs": [],
    "source": [
     "# Calculate the average ERA for each team, list the teams by the average ERA in a descending order.\n",
-    "df.groupby(\"teamID\")[\"ERA\"].mean().sort_values(ascending=False)\n"
+    "df.groupby(\"teamID\")[[\"ERA\"]].mean().sort_values(\"ERA\", ascending=False)\n"
    ]
   },
   {
@@ -179,7 +179,7 @@
    "source": [
     "# Calculate each team’s average ERA from 2011 to 2015, and list the result as a table, where each column is a year, each row is a team.\n",
     "df2011_2015 = df[(df[\"yearID\"] >= 2011) & (df[\"yearID\"] <= 2015)]\n",
-    "df2011_2015.groupby([\"teamID\", \"yearID\"])[\"ERA\"].mean().unstack()\n"
+    "df2011_2015.groupby([\"teamID\", \"yearID\"])[[\"ERA\"]].mean().unstack()\n"
    ]
   },
   {
@@ -196,7 +196,7 @@
    "outputs": [],
    "source": [
     "# Calculate the average ERAs for American League (AL) and National League (NL) from 2011 to 2015, and list the result as a table, where each column is a league and each row is a year.\n",
-    "df2011_2015.groupby([\"yearID\", \"lgID\"])[\"ERA\"].mean().unstack()\n"
+    "df2011_2015.groupby([\"yearID\", \"lgID\"])[[\"ERA\"]].mean().unstack()\n"
    ]
   },
   {
